--- a/shop/templates/shop/basket_in_constructor.html
+++ b/shop/templates/shop/basket_in_constructor.html
@@ -3,12 +3,13 @@
 {% for constructor_elem in basket_constructor_elems %}
 <div class="block_info_search2">
     <div class="search_block2">
-        <img src="{{ constructor_elem.photo.url }}">
-        <h4>{{ constructor_elem.name }}</h4>
-        <p>{{ constructor_elem.price }} р/шт</p>
+        <img src="{{ constructor_elem.product.photo.url }}">
+        <h4>{{ constructor_elem.product.name }}</h4>
+        <p>{{ constructor_elem.count }} шт</p>
+        <p style="margin-top: 0!important;">{{ constructor_elem.sum }} руб</p>
     </div>
-    <div class="add_in_lego_flover">
-        <img src="{% static 'shop/img/error.png' %}">
+    <div class="add_in_lego_flover delete_from_lego_flower">
+        <img id="{{ constructor_elem.id }}" onclick="delete_from_lego_flower.call(this)" src="{% static 'shop/img/error.png' %}">
     </div>
 </div>
 {% endfor %}
