--- a/shop/templates/shop/catalog_in_constructor.html
+++ b/shop/templates/shop/catalog_in_constructor.html
@@ -1,10 +1,88 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% load staticfiles %}
+
+{% for product in products %}
+<div class="block_info_search2">
+    <div class="search_block2">
+        <img src="{{ product.photo.url }}">
+        <h4>{{ product.name }}</h4>
+        {% if product.sale_price %}
+            <div class="sale sale_search">
+                <strike class="price_in_search" style="padding-top: 5px!important;">{{ product.price }}</strike>
+                <p class="sale_price_in_lego" style="margin-top: 5px!important;">&nbsp{{ product.sale_price }} Руб/шт</p>
+                <img style="margin-top: 0px!important;" src="{% static 'shop/img/sale.png' %}">
+            </div>
+        {% else %}
+            <p>{{ product.price }} руб/шт</p>
+        {% endif %}
+    </div>
+    <div class="add_in_lego_flover">
+        <div style="height:30px; width: 30px; background: #b85778; border-radius: 15px; margin-top: 35px;cursor: pointer; float: right">
+            <img id="{{ product.id }}" onclick="add_product_to_basket_in_constructor.call(this)" style="width: 20px; height: 20px; margin-top: 5px!important;" src="{% static 'shop/img/plyusik.png' %}"></div>
+    </div>
+    <div class="count_flover_2">
+        <div class="counter_basket2" style="margin-top: 35px;">
+            <button type="button" class="but counterBut dec dec{{ product.id }}">-</button>
+            <input type="number" class="field fieldCount fieldCount{{ product.id }}" value="1" data-min="1" data-max="101">
+            <button type="button" class="but counterBut inc inc{{ product.id }}">+</button>
+        </div>
+    </div>
+</div>
+<script>
+    function catalogItemCounter(field){
+
+        var fieldCount = function(el) {
+
+            var
+                // Мин. значение
+                min = el.data('min') || false,
+
+                // Макс. значение
+                max = el.data('max') || false,
+
+                // Кнопка уменьшения кол-ва
+                dec = el.prev('.dec{{ product.id }}'),
+
+                // Кнопка увеличения кол-ва
+                inc = el.next('.inc{{ product.id }}');
+
+            function init(el) {
+                if(!el.attr('disabled')){
+                    dec.on('click', decrement);
+                    inc.on('click', increment);
+                }
+
+                // Уменьшим значение
+                function decrement() {
+                    var value = parseInt(el[0].value);
+                    value--;
+
+                    if(!min || value >= min) {
+                        el[0].value = value;
+                    }
+                }
+
+                // Увеличим значение
+                function increment() {
+                    var value = parseInt(el[0].value);
+
+                    value++;
+
+                    if(!max || value <= max) {
+                        el[0].value = value++;
+                    }
+                }
+
+            }
+
+            el.each(function() {
+                init($(this));
+            });
+        };
+
+        $(field).each(function(){
+            fieldCount($(this));
+        });
+    }
+catalogItemCounter('.fieldCount{{ product.id }}');
+</script>
+{% endfor %}
