--- a/shop/templates/shop/close_consturctor.html
+++ b/shop/templates/shop/close_consturctor.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% load staticfiles %}
+    <div class="closing_constructor" id="closing_constructor">
+        <div class="empty-basket">
+            <div class="divide"></div>
+                <p>Букет добавлен в корзину</p>
+            <div class="divide"></div>
+        </div>
+    </div>
