--- a/shop/templates/shop/payment.html
+++ b/shop/templates/shop/payment.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% load staticfiles %}
+
+<div class="main_call_back" id="confirm_order">
+    {% include 'shop/payment_input.html' %}
+</div>
