--- a/shop/static/shop/css/style.css
+++ b/shop/static/shop/css/style.css
@@ -418,6 +418,7 @@ ul:after {
 .flovers_foto{
     display: inline-block;
     height: 250px;
+    margin-left: -5%;
 }
 
 .basket_add{
@@ -1366,7 +1367,7 @@ height: 20px;
     top: 45%;
 	left: 50%;
 	margin-top: -297px;
-	margin-left: -445px;
+	margin-left: -350px;
     z-index: 9998;
     position: fixed;
     display: none;
